src/objects/Apttus_Config2__AttributeValueMatrixEntry__c.object
<CustomObject>
    <description>Represents a row (entry) in an attribute value matrix.</description>
    <fields>
        <fullName>APTS_Number_of_months__c</fullName>
        <label>Number of Months</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Refurbished__c</fullName>
        <label>Refurbished?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_0333</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>SAP_0975</fullName>
                    <label>Denmark</label>
                </value>
                <value>
                    <fullName>SAP_0976</fullName>
                    <label>Sweden</label>
                </value>
                <value>
                    <fullName>SAP_6864</fullName>
                    <label>Norway</label>
                </value>
                <value>
                    <fullName>SAP_6706</fullName>
                    <label>France</label>
                </value>
                <value>
                    <fullName>SAP_0080</fullName>
                    <label>Spain</label>
                </value>
                <value>
                    <fullName>SAP_0111</fullName>
                    <label>Netherlands</label>
                </value>
                <value>
                    <fullName>SAP_6709</fullName>
                    <label>Ireland</label>
                </value>
                <value>
                    <fullName>SAP_6712</fullName>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>SAP_6750</fullName>
                    <label>Great Britain</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Type_of_contract__c</fullName>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>RentBuy</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Free On Loan</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Consumption</fullName>
                    <label>Consumption Model</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AttributeValueMatrixId__c</fullName>
        <description>ID of the associated attribute value matrix</description>
        <inlineHelpText>ID of the associated attribute value matrix</inlineHelpText>
        <label>Attribute Value Matrix</label>
        <referenceTo>Apttus_Config2__AttributeValueMatrix__c</referenceTo>
        <relationshipLabel>Attribute Value Matrix Entries</relationshipLabel>
        <relationshipName>AttributeValueMatrixEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Color__c</fullName>
        <description>The product color.</description>
        <inlineHelpText>The product color.</inlineHelpText>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Vendor__c</fullName>
        <description>The product vendor.</description>
        <inlineHelpText>The product vendor.</inlineHelpText>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Attribute Value Matrix Entry</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AVME-{0000000000}</displayFormat>
        <label>Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Value Matrix Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>